# ev-MOGA

./: .gitignore  MANIFEST.in  README.md  analyze_evMOGA_results.ipynb  analyze_evMOGA_results.py  evMOGA_example1.ipynb  evMOGA_example1.py  evMOGA_example2.ipynb  evMOGA_example2.py  evMOGA_user_functions.py  evmoga.py  portfolio_selection_analyze_evMOGA_results.ipynb  portfolio_selection_analyze_evMOGA_results.py  portfolio_selection_run_evMOGA_2obj.ipynb  portfolio_selection_run_evMOGA_2obj.py  portfolio_selection_run_evMOGA_3obj.ipynb  portfolio_selection_user_functions.py  pyproject.toml  run_evMOGA_2obj.ipynb  run_evMOGA_2obj.py  run_evMOGA_3obj.ipynb  user_functions.py  utilities.py
Datasets/: Dataset_SRI.xlsx
Datasets/Datasets_Sustainability/: Readme.txt
ev_moga/: __init__.py  individual.py  moga.py  objectives.py  population.py
evmoga/: __init__.py  dominance_cone.py  evmoga.py  latex.py  metrics.py  portfolio_selection_user_functions.py  utilities.py
examples/: basic_usage.py  custom_objectives.py
mat_files/: evMOGApy_Eurostoxx50_2obj.mat
tests/: __init__.py  test_individual.py
xlsx_files/: evMOGApy_Eurostoxx50_2obj.xlsx  evMOGApy_Eurostoxx50_3obj.xlsx
