[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-moga"
version = "0.1.0"
description = "Multi-Objective Genetic Algorithm for Electric Vehicle optimization"
readme = "README.md"
authors = [
    {name = "adhilcab"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["genetic algorithm", "multi-objective optimization", "electric vehicle", "evolutionary computation"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
]

[project.urls]
"Homepage" = "https://github.com/adhilcab/ev-MOGA"
"Bug Reports" = "https://github.com/adhilcab/ev-MOGA/issues"
"Source" = "https://github.com/adhilcab/ev-MOGA"

[tool.setuptools.packages.find]
where = ["."]
include = ["ev_moga*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88